--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,16 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.8.0
+  google_sign_in: ^6.2.2
   http: ^1.2.2
   image_picker: ^0.8.7+4
+  jwt_decoder: ^2.0.1
   permission_handler: ^10.2.0
+  shared_preferences: ^2.3.3
   sqflite: ^2.3.3+1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
