--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^18.0.1
+  flutter_native_timezone: ^2.0.0
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.2.2
   http: ^1.2.2
@@ -40,6 +42,7 @@ dependencies:
   permission_handler: ^10.2.0
   shared_preferences: ^2.3.3
   sqflite: ^2.3.3+1
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
