--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   permission_handler: ^10.2.0
   shared_preferences: ^2.3.3
   sqflite: ^2.3.3+1
-
+  mockito: ^5.4.4
+  provider: ^6.0.5
 dev_dependencies:
+  build_runner: ^2.4.11
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
