--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        ext.kotlin_version = '1.9.23'
+        google()
+        mavenCentral()
+    }
+    dependencies { // Ensure compatibility with Gradle 7.6.3
+        classpath 'com.google.gms:google-services:4.4.2' // Use the latest version available
+    }
+}
 allprojects {
     repositories {
         google()
