--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,12 @@ environment:
 dependencies:
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.6
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^7.1.1
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.2.2
   http: ^1.2.2
