--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^0.8.7+4
   jwt_decoder: ^2.0.1
+  mockito: ^5.4.4
   permission_handler: ^10.2.0
   shared_preferences: ^2.3.3
   sqflite: ^2.3.3+1
@@ -44,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
@@ -77,6 +80,7 @@ flutter:
     - assets/img/slimfit.png
     - assets/img/mothers_glow.png
     - assets/img/nurture_nourish.png
+    - assets/img/brokoli_test.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
