--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,13 @@ dependencies:
   image_picker: ^0.8.7+4
   jwt_decoder: ^2.0.1
   mockito: ^5.4.4
+  quickalert: ^1.1.0
+  toastification: ^2.3.0
   permission_handler: ^10.2.0
+  provider: ^6.0.5
   shared_preferences: ^2.3.3
   sqflite: ^2.3.3+1
-  provider: ^6.0.5
+  
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_lints: ^3.0.0
