--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,27 +28,34 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_text_kit: ^4.2.2
+  cached_network_image: ^3.4.1
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.6
+  file_picker: ^8.1.7
   firebase_auth: ^5.3.4
   firebase_core: ^3.8.1
   firebase_messaging: ^15.1.6
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.2
   flutter_facebook_auth: ^7.1.1
+  flutter_local_notifications: ^18.0.1
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.2.2
   http: ^1.2.2
   image_picker: ^0.8.7+4
+  intl: ^0.20.1
   jwt_decoder: ^2.0.1
   mockito: ^5.4.4
-  quickalert: ^1.1.0
-  toastification: ^2.3.0
+  path_provider: ^2.1.5
   permission_handler: ^10.2.0
   provider: ^6.0.5
+  quickalert: ^1.1.0
   shared_preferences: ^2.3.3
   sqflite: ^2.3.3+1
-  
+  toastification: ^2.3.0
+
 dev_dependencies:
   build_runner: ^2.4.11
   flutter_lints: ^3.0.0
@@ -89,6 +96,7 @@ flutter:
     - assets/img/mothers_glow.png
     - assets/img/nurture_nourish.png
     - assets/img/brokoli_test.jpg
+    - assets/sound/sound_alarm.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
