--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_animate: ^4.5.2
   flutter_facebook_auth: ^7.1.1
   flutter_local_notifications: ^18.0.1
+  flutter_rating_bar: ^4.0.1
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.2.2
   http: ^1.2.2
